# yozora-diff-kessan

./: .env.example  .gitignore  LICENSE.txt  README.md  pyproject.toml  run_app.sh
app_frontend/: .gitignore  package-lock.json  package.json  tailwind.config.ts
app_frontend/app/: layout.tsx  page.tsx  types.ts
app_frontend/app/api/run/: route.ts
app_frontend/app/components/: DiffViewer.tsx  FileUploader.tsx  ProgressIndicator.tsx  SectionViewer.tsx  Stage1Viewer.tsx  Stage2Viewer.tsx
app_frontend/app/hooks/: usePythonRunner.ts
app_frontend/app/styles/: globals.css
app_frontend/app/utils/: parseTags.ts
articles/: 2025-10-01-overview.md  2025-10-08-document_parser.md  2025-10-15-sentence_alignner.md  2025-10-22-llm_summarizer.md
src/: __init__.py  data_models.py  main.py
src/document_parser/: pdf_parser.py  text_utils.py
src/document_parser/xbrl_parser/: __init__.py  constants.py  document.py  dom_utils.py  html_utils.py  sections.py  toc_parser.py
src/llm_summarizer/: edit_tagger.py  prompts.py  two_stage_summarizer.py
src/text_aligner/: section_aligner.py  sentence_aligner.py
test/: test_data_models.py  test_edit_tagger.py  test_pdf_parser.py  test_section_aligner.py  test_sentence_aligner.py  test_two_stage_summarizer.py
